k3d-files/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-security-service
spec:
  selector:
    app: flask-security-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
