k3d-files/prom_alert.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-istio
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: web
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-istio
  namespace: default
spec:
  type: ClusterIP
  selector:
    alertmanager: main
  ports:
    - name: http
      port: 9093
      targetPort: web
