k3d-files/alert-gate.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: alertmanager-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 81
      name: http-alertmanager
      protocol: HTTP
    hosts:
    - "*"
