k3d-files/flask-gate.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: flask-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 82
      name: http-flask
      protocol: HTTP
    hosts:
    - "*"
