k3d-files/flask-virtualservice.yaml
# flask-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flask-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: flask-security-service
        port:
          number: 5000
