k3d-files/prom-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - prometheus-gateway
  http:
  - route:
    - destination:
        host: prometheus-operated.default.svc.cluster.local
        port:
          number: 9090
